feat(network): added certificate authority generation
