# pkg/api/health.go
@@ -14,13 +14,14 @@ type healthResponse struct {
 // @BasePath /api/v1
 
 // Healthcheck godoc
-// @Summary ping example
+// @Summary Health check for the service
 // @Schemes
-// @Description do ping
-// @Tags example
+// @Description This endpoint is used to verify the health and availability of the service.
+// It can be used by monitoring tools or external systems to ensure that the service is running and responsive.
+// @Tags health
 // @Accept json
 // @Produce json
-// @Success 200 {object} api.healthResponse
+// @Success 200 {object} api.healthResponse "The service is operational and healthy"
 // @Router / [get]
 func healthCheckHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, healthResponse{
